title to role buttons

--- a/index.html
+++ b/index.html
@@ -35,20 +35,20 @@
     <h4 class="introHeader text-center">
       Next Innovation Camp: Join us on Oct 27.
       <div class="start-btn">
-        <a role="button" href="#innovation-camps" class="button button-primary small ml-2">Register</a>
+        <a role="button" title="register" href="#innovation-camps" class="button button-primary small ml-2">Register</a>
       </div>
     </h4>
     <!-- Intro end -->
 
     <!-- Navbar -->
     <nav class="navbar">
-      <button role="button" class="toggle-collapse">
+      <button role="button" title="navbar" class="toggle-collapse">
         <i class="fa fa-bars"></i>
       </button>
-      <a role="button" href="#page-top"><i class="icon mobile-icon fab fa-pushed"></i></a>
+      <a role="button" title="icon" href="#page-top"><i class="icon mobile-icon fab fa-pushed"></i></a>
       <div class="navbar-collapse">
         <ul class="navbar-nav align-items-center">
-          <a role="button" href="#page-top"><i class="icon fab fa-pushed"></i></a>
+          <a role="button" title="icon" href="#page-top"><i class="icon fab fa-pushed"></i></a>
           <li class="nav-link"><a title="Go to about us" href="#about-us" class="nav-item">About Us</a></li>
           <li class="nav-link"><a title="Go to our team" href="#our-team" class="nav-item">Our Team</a></li>
           <li class="nav-link"><a title="Go to innovation camps" href="#innovation-camps" class="nav-item">Innovation Camps</a></li>
@@ -69,7 +69,7 @@
           <h1 class="hero-title">Channel your inner entrepreneur.</h1>
           <div class="row d-flex align-items-center">
             <div class="hero-subtitle">Join us at Oct 27th.</div>
-            <a role="button" href="#innovation-camps" role="button" class="button button-primary small ml-2">Join us</a>
+            <a role="button" title="Join Us" href="#innovation-camps" class="button button-primary small ml-2">Join us</a>
           </div>
         </div>
       </div>
@@ -97,7 +97,7 @@
             <br />
           </p>
           <span class="font-weight-medium mt-1"> The lastest of which is on Oct 27. </span>
-          <button role="button" class="button button-primary small ml-2">Join us</button>
+          <button role="button" title="Join Us" class="button button-primary small ml-2">Join us</button>
         </div>
       </div>
     </section>
@@ -192,7 +192,7 @@
                 <h2>Camp Bergen</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
                 <div>
-                  <button role="button" class="button button-primary">Join camp</button>
+                  <button role="button" title="Join Camp" class="button button-primary">Join camp</button>
                 </div>
               </div>
             </div>
@@ -223,7 +223,7 @@
                 <h2>Camp Oslo</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores, culpa.</p>
                 <div>
-                  <button role="button" class="button button-primary">Join camp</button>
+                  <button role="button" title="Join Camp" class="button button-primary">Join camp</button>
                 </div>
               </div>
             </div>
@@ -292,7 +292,7 @@
           </div>
 
           <div class="col-xs-12 pt-3 pb-3 text-center">
-            <a role="button" href="#" class="button button-primary">Submit</a>
+            <a role="button" title="Submit" href="#" class="button button-primary">Submit</a>
           </div>
         </div>
       </div>
@@ -309,7 +309,7 @@
             <p class="text-center">Join over 10.500 people who recieve weekly web marketing tips</p>
             <center>
               <input placeholder="Your email adress..." class="footer-input" />
-              <button role="button" class="footer-btn button button-primary small">Submit</button>
+              <button role="button" title="Submit" class="footer-btn button button-primary small">Submit</button>
             </center>
           </div>
           <!-- Get in touch -->
