Polyfilled intersection observer

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
           <!-- Newsletter -->
           <div class="footer-flex footer-item">
             <h3 class="text-center footer-header">Sign up for our newsletter</h3>
-            <p class="text-center">Join over 10.500 people who recieve weekly web marketing tips</p>
+            <p class="text-center">Join over 10.500 people who recieve weekly innovation tips</p>
             <center>
               <input placeholder="Your email adress..." class="footer-input" />
               <button role="button" title="Submit" class="footer-btn button button-primary small">
@@ -427,6 +427,7 @@
     </section>
     <!-- All rights reserved end -->
 
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
     <script src="./app.js"></script>
   </body>
 </html>
