--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
 
     <!-- All rights reserved -->
     <section class="all-rights-reserved">
-      <p class="text-center">© 2020 Your Company. All Rights Reserved.</p>
+      <p class="text-center">© 2020 Inova. All Rights Reserved.</p>
     </section>
     <!-- All rights reserved end -->
 
