--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     </section>
     <!-- All rights reserved end -->
 
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CArray.prototype.forEach%2CIntersectionObserver%2CIntersectionObserverEntry%2CNodeList.prototype.forEach%2CObject.assign"></script>
     <script src="./app.js"></script>
   </body>
 </html>
