--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
     </section>
     <!-- All rights reserved end -->
 
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CArray.prototype.forEach%2CIntersectionObserver%2CIntersectionObserverEntry%2CNodeList.prototype.forEach%2CObject.assign"></script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CArray.prototype.forEach%2CIntersectionObserver%2CIntersectionObserverEntry%2CNodeList.prototype.forEach%2CObject.assign%2CElement.prototype.classList%2CSymbol.replace%2CArray.from%2CArray.prototype.map%2CNode.prototype.contains"></script>
     <script src="./app.js"></script>
   </body>
 </html>
