--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <!-- Meta -->
@@ -41,6 +41,7 @@
     <!-- Intro end -->
 
     <!-- Navbar -->
+    <!-- This navbar is inspired by the navbar student s354411 delivered in the assignment Freaky-friday, made by the same student -->
     <nav class="navbar">
       <button role="button" title="navbar" class="toggle-collapse">
         <i class="fa fa-bars"></i>
@@ -184,8 +185,7 @@
               <div
                 class="card-header"
                 style="
-                  background-image: url('https://www.uib.no/sites/w3.uib.no/files/styles/wide_thumbnail/public/media/universitetsmuseet_museplassen3_0_1.jpg?itok=vXtY7C-W');
-                "
+                  background-image: url('https://www.uib.no/sites/w3.uib.no/files/styles/wide_thumbnail/public/media/universitetsmuseet_museplassen3_0_1.jpg?itok=vXtY7C-W');"
               ></div>
               <div class="card-content">
                 <p>Oct 27th.</p>
@@ -202,8 +202,7 @@
               <div
                 class="card-header"
                 style="
-                  background-image: url('https://images.unsplash.com/photo-1555725305-e823b44548de?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80');
-                "
+                  background-image: url('https://images.unsplash.com/photo-1555725305-e823b44548de?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80');"
               ></div>
               <div class="card-content">
                 <p>December 6th.</p>
