Added JS Disabled support

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Meta -->
@@ -110,7 +110,7 @@
       <h2 class="sectionHeader text-center">About us</h2>
       <hr />
       <div class="row">
-        <div class="col-sm-6 p-3 fade fadeOut">
+        <div class="col-sm-6 p-3 fade">
           <h3 class="mt-4 font-weight-medium">World leader in frugal innovation</h3>
           <p class="mt-1">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate, aut. Delectus,
@@ -118,7 +118,7 @@
             <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, incidunt?
           </p>
         </div>
-        <div class="col-sm-6 p-3 fade fadeOut">
+        <div class="col-sm-6 p-3 fade">
           <h3 class="mt-4 font-weight-medium">Hosting the world's innovation camps</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus praesentium
@@ -143,13 +143,9 @@
         <div class="row">
           <div class="col-sm-12 team-member d-flex">
             <div class="center-img col-sm-6">
-              <img
-                alt="Picture of manager"
-                class="rounded img-fluid fade fadeOut"
-                src="img/person1.jpg"
-              />
+              <img alt="Picture of manager" class="rounded img-fluid fade" src="img/person1.jpg" />
             </div>
-            <div class="fade fadeOut">
+            <div class="fade">
               <h2 class="teamHeader">Manager</h2>
               <h2 class="teamName">Houcine Ncib</h2>
               <p>
@@ -168,13 +164,9 @@
         <div class="row">
           <div class="col-sm-12 team-member d-flex">
             <div class="center-img col-sm-6">
-              <img
-                alt="Picture of Designer"
-                class="rounded img-fluid fade fadeOut"
-                src="img/person2.jpg"
-              />
+              <img alt="Picture of Designer" class="rounded img-fluid fade" src="img/person2.jpg" />
             </div>
-            <div class="fade fadeOut">
+            <div class="fade">
               <h2 class="teamHeader">Designer</h2>
               <h2 class="teamName">Luis Villasmil</h2>
               <p>
@@ -195,11 +187,11 @@
             <div class="center-img col-sm-6">
               <img
                 alt="Picture of Developer"
-                class="rounded img-fluid fade fadeOut"
+                class="rounded img-fluid fade"
                 src="img/person3.jpg"
               />
             </div>
-            <div class="fade fadeOut">
+            <div class="fade">
               <h2 class="teamHeader">Developer</h2>
               <h2 class="teamName">Etty Fidele</h2>
               <p>
@@ -223,11 +215,12 @@
         <hr />
         <div class="row justify-content-center">
           <div class="col-sm-4">
-            <div class="card fade fadeOut">
+            <div class="card fade">
               <div
                 class="card-header"
                 style="
-                  background-image: url('https://www.uib.no/sites/w3.uib.no/files/styles/wide_thumbnail/public/media/universitetsmuseet_museplassen3_0_1.jpg?itok=vXtY7C-W');"
+                  background-image: url('https://www.uib.no/sites/w3.uib.no/files/styles/wide_thumbnail/public/media/universitetsmuseet_museplassen3_0_1.jpg?itok=vXtY7C-W');
+                "
               ></div>
               <div class="card-content">
                 <p>Oct 27th.</p>
@@ -242,11 +235,12 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="card fade fadeOut delay-1">
+            <div class="card fade delay-1">
               <div
                 class="card-header"
                 style="
-                  background-image: url('https://images.unsplash.com/photo-1555725305-e823b44548de?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80');"
+                  background-image: url('https://images.unsplash.com/photo-1555725305-e823b44548de?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1952&q=80');
+                "
               ></div>
               <div class="card-content">
                 <p>December 6th.</p>
@@ -259,7 +253,7 @@
             </div>
           </div>
           <div class="col-sm-4">
-            <div class="card fade fadeOut delay-2">
+            <div class="card fade delay-2">
               <div class="card-header"></div>
               <div class="card-content">
                 <p>March 24th.</p>
