Add rel too target="_black" from https://web.dev/external-anchors-use-rel-noopener/?utm_source=lighthouse&utm_medium=devtools

--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@
                 title="Go to linkedin"
                 href="https://www.linkedin.com"
                 target="_blank"
+                rel="noopener"
                 class="linkedin"
                 ><i class="fab fa-linkedin"></i
               ></a>
@@ -386,6 +387,7 @@
                 title="Go to facebook"
                 href="https://www.facebook.com"
                 target="_blank"
+                rel="noopener"
                 class="facebook"
                 ><i class="fab fa-facebook"></i
               ></a>
@@ -393,6 +395,7 @@
                 title="Go to instagram"
                 href="https://www.instagram.com/"
                 target="_blank"
+                rel="noopener"
                 class="instagram"
                 ><i class="fab fa-instagram"></i
               ></a>
@@ -400,6 +403,7 @@
                 title="Go to youtube"
                 href="https://www.youtube.com"
                 target="_blank"
+                rel="noopener"
                 class="youtube"
                 ><i class="fab fa-youtube"></i
               ></a>
