--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- Title -->
     <title>Inova | Prosphering innovation</title>
 
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/icon.jpg">
+    
     <!-- Stylesheets -->
     <link
       rel="stylesheet"
