--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
               id="message"
               class="input-el"
               placeholder="Your message for us ..."
-              row="4"
+              rows="10"
               required
             ></textarea>
           </div>
